--- a/style.css
+++ b/style.css
@@ -1,210 +1,214 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
+:root {
+	--green: #046a38;
+	--theme: #ff671f;
+	--black: #000;
+	--light: #666;
+	--aqua: #0ff;
+	--box-shadow: 0 0.5rem 1.5rem black;
+	--border: 0.1rem solid black;
+}
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Poppins", Arial, sans-serif;
+	scroll-behavior: smooth;
+	outline: none;
+	border: none;
+	text-decoration: none;
+	text-transform: capitalize;
+	transition: all 0.2s linear;
+}
+body {
+	background: radial-gradient(circle, #ff0, var(--theme), #ff4500);
+	background-size: 150%;
+	animation: animateBackground 5s linear infinite;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	width: 100vw;
+	height: 100vh;
+}
+@keyframes animateBackground {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+.container {
+	background-color: #fff;
+	border-radius: 30px;
+	box-shadow: var(--box-shadow);
+	position: relative;
+	overflow: hidden;
+	width: 70vw;
+	max-width: 100%;
+	min-height: 70vh;
+}
+.container p {
+	font-size: 1.2rem;
+	line-height: 2rem;
+	letter-spacing: 0.1rem;
+	margin: 1.5rem 0;
+}
+.container a {
+	color: var(--black);
+	font-size: 0.8rem;
+	text-decoration: none;
+	margin: 1rem 0;
+}
+.container a:hover {
+	color: var(--green);
+}
+.container button {
+	margin-top: 1rem;
+	display: inline-block;
+	padding: 0.5rem 2rem;
+	font-size: 1rem;
+	border: 0.2rem solid var(--black);
+	border-radius: 2rem;
+	color: var(--black);
+	cursor: pointer;
+	background: none;
+}
+.container button:hover {
+	background: linear-gradient(to right, var(--green), #fff);
+	background-size: 200% 200%;
+	animation: animateButtonBackground 1s linear forwards;
+	color: #fff;
+}
+@keyframes animateButtonBackground {
+	0% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
-body{
-    background-color: #c9d6ff;
-    background: linear-gradient(to right, #e2e2e2, #c9d6ff);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    height: 100vh;
+.container button.hidden {
+	background-color: transparent;
+	border-color: var(--border);
 }
-
-.container{
-    background-color: #fff;
-    border-radius: 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
-    position: relative;
-    overflow: hidden;
-    width: 768px;
-    max-width: 100%;
-    min-height: 480px;
+.container form {
+	background-color: #fff;
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 2rem;
+	height: 100%;
 }
-
-.container p{
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: 0.3px;
-    margin: 20px 0;
+.container input {
+	background-color: #eee;
+	border: var(--border);
+	margin: 0.5rem 0;
+	padding: 0.5rem;
+	font-size: 1rem;
+	border-radius: 2rem;
+	width: 100%;
+	outline: none;
 }
-
-.container span{
-    font-size: 12px;
+.form-container {
+	position: absolute;
+	top: 0;
+	height: 100%;
+	transition: all 0.5s linear;
 }
-
-.container a{
-    color: #333;
-    font-size: 13px;
-    text-decoration: none;
-    margin: 15px 0 10px;
+.sign-in {
+	right: 0;
+	width: 50%;
+	z-index: 2;
 }
-
-.container button{
-    background-color: #512da8;
-    color: #fff;
-    font-size: 12px;
-    padding: 10px 45px;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    font-weight: 600;
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    margin-top: 10px;
-    cursor: pointer;
+.container.active .sign-in {
+	transform: translateX(-100%);
 }
-
-.container button.hidden{
-    background-color: transparent;
-    border-color: #fff;
+.register {
+	right: 0;
+	width: 50%;
+	opacity: 0;
+	z-index: 1;
 }
-
-.container form{
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    height: 100%;
+.container.active .register {
+	transform: translateX(-100%);
+	opacity: 1;
+	z-index: 5;
+	animation: move 0.5s;
 }
-
-.container input{
-    background-color: #eee;
-    border: none;
-    margin: 8px 0;
-    padding: 10px 15px;
-    font-size: 13px;
-    border-radius: 8px;
-    width: 100%;
-    outline: none;
+@keyframes move {
+	0%,
+	49.99% {
+		opacity: 0;
+		z-index: 1;
+	}
+	50%,
+	100% {
+		opacity: 1;
+		z-index: 5;
+	}
 }
-
-.form-container{
-    position: absolute;
-    top: 0;
-    height: 100%;
-    transition: all 0.6s ease-in-out;
+.toggle-container {
+	position: absolute;
+	top: 0;
+	right: 50%;
+	width: 50%;
+	height: 100%;
+	overflow: hidden;
+	transition: all 0.5s linear;
+	border-radius: 50%;
+	z-index: 1000;
 }
-
-.sign-in{
-    left: 0;
-    width: 50%;
-    z-index: 2;
+.container.active .toggle-container {
+	transform: translateX(100%);
+	border-radius: 50%;
 }
+.toggle {
+	background-color: var(--theme);
+	background: linear-gradient(to bottom, var(--theme), #fff, var(--green));
 
-.container.active .sign-in{
-    transform: translateX(100%);
+	color: #000;
+	position: relative;
+	left: -100%;
+	height: 100%;
+	width: 200%;
+	transform: translateX(0);
+	transition: all 0.5s linear;
 }
-
-.sign-up{
-    left: 0;
-    width: 50%;
-    opacity: 0;
-    z-index: 1;
+.container.active .toggle {
+	transform: translateX(50%);
 }
-
-.container.active .sign-up{
-    transform: translateX(100%);
-    opacity: 1;
-    z-index: 5;
-    animation: move 0.6s;
+.toggle-panel {
+	position: absolute;
+	width: 50%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 2rem;
+	text-align: center;
+	top: 0;
+	transform: translateX(0);
+	transition: all 0.5s linear;
 }
-
-@keyframes move{
-    0%, 49.99%{
-        opacity: 0;
-        z-index: 1;
-    }
-    50%, 100%{
-        opacity: 1;
-        z-index: 5;
-    }
+.toggle-left {
+	transform: translateX(-200%);
 }
-
-.social-icons{
-    margin: 20px 0;
+.container.active .toggle-left {
+	transform: translateX(0);
 }
-
-.social-icons a{
-    border: 1px solid #ccc;
-    border-radius: 20%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 3px;
-    width: 40px;
-    height: 40px;
+.toggle-right {
+	right: 0;
+	transform: translateX(0);
 }
-
-.toggle-container{
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    transition: all 0.6s ease-in-out;
-    border-radius: 150px 0 0 100px;
-    z-index: 1000;
-}
-
-.container.active .toggle-container{
-    transform: translateX(-100%);
-    border-radius: 0 150px 100px 0;
-}
-
-.toggle{
-    background-color: #512da8;
-    height: 100%;
-    background: linear-gradient(to right, #5c6bc0, #512da8);
-    color: #fff;
-    position: relative;
-    left: -100%;
-    height: 100%;
-    width: 200%;
-    transform: translateX(0);
-    transition: all 0.6s ease-in-out;
-}
-
-.container.active .toggle{
-    transform: translateX(50%);
-}
-
-.toggle-panel{
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 30px;
-    text-align: center;
-    top: 0;
-    transform: translateX(0);
-    transition: all 0.6s ease-in-out;
-}
-
-.toggle-left{
-    transform: translateX(-200%);
-}
-
-.container.active .toggle-left{
-    transform: translateX(0);
-}
-
-.toggle-right{
-    right: 0;
-    transform: translateX(0);
-}
-
-.container.active .toggle-right{
-    transform: translateX(200%);
+.container.active .toggle-right {
+	transform: translateX(200%);
 }
