--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-	--green: #046a38;
 	--theme: #ff671f;
-	--black: #000;
+	--green: #046a38;
 	--light: #666;
-	--aqua: #0ff;
 	--box-shadow: 0 0.5rem 1.5rem black;
-	--border: 0.1rem solid black;
+	--border: 0.15rem solid black;
 }
 * {
 	margin: 0;
@@ -19,7 +17,6 @@
 	border: none;
 	text-decoration: none;
 	text-transform: capitalize;
-	transition: all 0.2s linear;
 }
 body {
 	background: radial-gradient(circle, #ff0, var(--theme), #ff4500);
@@ -73,7 +70,7 @@ body {
 	display: inline-block;
 	padding: 0.5rem 2rem;
 	font-size: 1rem;
-	border: 0.2rem solid var(--black);
+	border: var(--border);
 	border-radius: 2rem;
 	color: var(--black);
 	cursor: pointer;
@@ -93,7 +90,6 @@ body {
 		background-position: 0% 50%;
 	}
 }
-
 .container button.hidden {
 	background-color: transparent;
 	border-color: var(--border);
@@ -141,7 +137,7 @@ body {
 	transform: translateX(-100%);
 	opacity: 1;
 	z-index: 5;
-	animation: move 0.5s;
+	animation: move 0.2s;
 }
 @keyframes move {
 	0%,
@@ -173,7 +169,6 @@ body {
 .toggle {
 	background-color: var(--theme);
 	background: linear-gradient(to bottom, var(--theme), #fff, var(--green));
-
 	color: #000;
 	position: relative;
 	left: -100%;
@@ -197,7 +192,7 @@ body {
 	text-align: center;
 	top: 0;
 	transform: translateX(0);
-	transition: all 0.5s linear;
+	transition: all 0.1s linear;
 }
 .toggle-left {
 	transform: translateX(-200%);
