--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
 	margin: 1.5rem 0;
 }
 .container a {
-	color: var(--black);
+	color: black;
 	font-size: 0.8rem;
 	text-decoration: none;
 	margin: 1rem 0;
@@ -73,7 +73,7 @@ body {
 	font-size: 1rem;
 	border: var(--border);
 	border-radius: 2rem;
-	color: var(--black);
+	color: black;
 	cursor: pointer;
 	background: none;
 }
